crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__blank_lines_E304_notebook.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
E304 [*] Blank lines found after function decorator (1)
  --> E30.ipynb:45:1
   |
43 | @decorator
44 |
45 | def function():
   | ^^^
46 |     pass
47 | # end
help: Remove extraneous blank line(s)
   |
43 | @decorator
   -
44 | def function():
   |
