crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__blank_lines_E304_typing_stub.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
E304 [*] Blank lines found after function decorator (1)
  --> E30.pyi:32:5
30 |     @decorated
31 |     
32 |     def with_blank_line(): ...
   |     ^^^
help: Remove extraneous blank line(s)
   |
30 |     @decorated
   -     
31 |     def with_blank_line(): ...
   |
