crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__blank_lines_top_level_isort_compatibility-lines-after(-1)-between(0).snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
I001 [*] Import block is un-sorted or un-formatted
 --> E30_isort.py:1:1
  |
1 | / import json
2 | |
3 | |
4 | |
5 | | from typing import Any, Sequence
  | |________________________________^
help: Organize imports
  |
1 | import json
  -
  -
  -
2 | from typing import Any, Sequence
  |

E302 [*] Expected 2 blank lines, found 1
  --> E30_isort.py:23:1
   |
21 |     abcd.foo()
22 |
23 | def __init__(self, backend_module: str, backend_obj: str | None) -> None: ...
   | ^^^
24 |
25 | if TYPE_CHECKING:
help: Add missing blank line(s)
   |
22 |
23 +
24 | def __init__(self, backend_module: str, backend_obj: str | None) -> None: ...

I001 [*] Import block is un-sorted or un-formatted
  --> E30_isort.py:26:5
25 |   if TYPE_CHECKING:
26 | /     import os
27 | |
28 | |
29 | |
30 | |     from typing_extensions import TypeAlias
   | |___________________________________________^
help: Organize imports
   |
27 |
   -
   -
28 |     from typing_extensions import TypeAlias
   |

E302 [*] Expected 2 blank lines, found 1
  --> E30_isort.py:35:1
   |
33 |     abcd.foo()
34 |
35 | def __call__(self, name: str, *args: Any, **kwargs: Any) -> Any:
   | ^^^
36 |     ...
help: Add missing blank line(s)
   |
34 |
35 +
36 | def __call__(self, name: str, *args: Any, **kwargs: Any) -> Any:
   |

E302 [*] Expected 2 blank lines, found 1
  --> E30_isort.py:41:1
   |
39 |     from typing_extensions import TypeAlias
40 |
41 | def __call__2(self, name: str, *args: Any, **kwargs: Any) -> Any:
   | ^^^
42 |     ...
help: Add missing blank line(s)
   |
40 |
41 +
42 | def __call__2(self, name: str, *args: Any, **kwargs: Any) -> Any:

I001 [*] Import block is un-sorted or un-formatted
  --> E30_isort.py:60:1
60 | from typing import Any, Sequence
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
61 |
62 | class MissingCommand(TypeError): ...  # noqa: N818
help: Organize imports
   |
61 |
62 +
63 | class MissingCommand(TypeError): ...  # noqa: N818
   |

E302 [*] Expected 2 blank lines, found 1
  --> E30_isort.py:62:1
   |
60 | from typing import Any, Sequence
61 |
62 | class MissingCommand(TypeError): ...  # noqa: N818
   | ^^^^^
help: Add missing blank line(s)
   |
61 |
62 +
63 | class MissingCommand(TypeError): ...  # noqa: N818
   |
