crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__blank_lines_typing_stub_isort.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
I001 [*] Import block is un-sorted or un-formatted
 --> E30_isort.pyi:1:1
  |
1 | / import json
2 | |
3 | |
4 | |
5 | | from typing import Any, Sequence
  | |________________________________^
help: Organize imports
  |
1 | import json
  -
  -
  -
2 | from typing import Any, Sequence
  -
3 |
  |

E303 [*] Too many blank lines (3)
 --> E30_isort.pyi:5:1
5 | from typing import Any, Sequence
  | ^^^^
help: Remove extraneous blank line(s)
  |
2 |
  -
  -
3 | from typing import Any, Sequence
  |

E303 [*] Too many blank lines (2)
 --> E30_isort.pyi:8:1
8 | class MissingCommand(TypeError): ...  # noqa: N818
  | ^^^^^
help: Remove extraneous blank line(s)
  |
6 |
  -
7 | class MissingCommand(TypeError): ...  # noqa: N818
  |

E303 [*] Too many blank lines (2)
  --> E30_isort.pyi:11:1
   |
11 | class BackendProxy:
   | ^^^^^
12 |     backend_module: str
13 |     backend_object: str | None
help: Remove extraneous blank line(s)
   |
9  |
   -
10 | class BackendProxy:
   |

E303 [*] Too many blank lines (2)
  --> E30_isort.pyi:17:1
   |
17 | if __name__ == "__main__":
   | ^^
18 |     import abcd
help: Remove extraneous blank line(s)
   |
15 |
   -
16 | if __name__ == "__main__":
   |

E303 [*] Too many blank lines (2)
  --> E30_isort.pyi:21:5
   |
21 |     abcd.foo()
   |     ^^^^
22 |
23 | def __init__(self, backend_module: str, backend_obj: str | None) -> None: ...
help: Remove extraneous blank line(s)
   |
19 |
   -
20 |     abcd.foo()

I001 [*] Import block is un-sorted or un-formatted
  --> E30_isort.pyi:26:5
   |
25 |   if TYPE_CHECKING:
26 | /     import os
27 | |
28 | |
29 | |
30 | |     from typing_extensions import TypeAlias
   | |___________________________________________^
help: Organize imports
27 |
   -
   -
28 |     from typing_extensions import TypeAlias
   |

E303 [*] Too many blank lines (3)
  --> E30_isort.pyi:30:5
   |
30 |     from typing_extensions import TypeAlias
   |     ^^^^
help: Remove extraneous blank line(s)
   |
27 |
   -
   -
28 |     from typing_extensions import TypeAlias
   |

E303 [*] Too many blank lines (2)
  --> E30_isort.pyi:33:5
33 |     abcd.foo()
   |     ^^^^
34 |
35 | def __call__(self, name: str, *args: Any, **kwargs: Any) -> Any:
help: Remove extraneous blank line(s)
   |
31 |
   -
32 |     abcd.foo()
   |

E303 [*] Too many blank lines (2)
  --> E30_isort.pyi:45:1
45 | def _exit(self) -> None: ...
   | ^^^
help: Remove extraneous blank line(s)
43 |
   -
44 | def _exit(self) -> None: ...
   |

E303 [*] Too many blank lines (2)
  --> E30_isort.pyi:48:1
48 | def _optional_commands(self) -> dict[str, bool]: ...
   | ^^^
help: Remove extraneous blank line(s)
46 |
   -
47 | def _optional_commands(self) -> dict[str, bool]: ...
   |

E303 [*] Too many blank lines (2)
  --> E30_isort.pyi:51:1
51 | def run(argv: Sequence[str]) -> int: ...
   | ^^^
help: Remove extraneous blank line(s)
49 |
   -
50 | def run(argv: Sequence[str]) -> int: ...
   |

E303 [*] Too many blank lines (2)
  --> E30_isort.pyi:54:1
54 | def read_line(fd: int = 0) -> bytearray: ...
   | ^^^
help: Remove extraneous blank line(s)
   |
52 |
   -
53 | def read_line(fd: int = 0) -> bytearray: ...

E303 [*] Too many blank lines (2)
  --> E30_isort.pyi:57:1
   |
57 | def flush() -> None: ...
   | ^^^
help: Remove extraneous blank line(s)
   |
55 |
   -
56 | def flush() -> None: ...
   |

E303 [*] Too many blank lines (2)
  --> E30_isort.pyi:60:1
   |
60 | from typing import Any, Sequence
   | ^^^^
61 |
62 | class MissingCommand(TypeError): ...  # noqa: N818
help: Remove extraneous blank line(s)
   |
58 |
   -
59 | from typing import Any, Sequence
   |
